--- a/stomp/src/frontend/src/index.css
+++ b/stomp/src/frontend/src/index.css
@@ -1,13 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 body {
@@ -22,4 +24,16 @@ body {
   border: 1px solid black;
   padding-left: 30px;
   padding-right: 30px;
+}
+
+.sender-message {
+  width: fit-content;
+  padding: 5px;
+  background-color: #f6e199;
+}
+
+.receiver-message {
+  width: fit-content;
+  padding: 5px;
+  background-color: #e2e3e5;
 }
